tests/ui/const-generics/const-param-elided-lifetime.full.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/const-param-elided-lifetime.rs:9:19
   |
LL | struct A<const N: &u8>;
   |                   ^ explicit lifetime name needed here

error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/const-param-elided-lifetime.rs:14:15
   |
LL | impl<const N: &u8> A<N> {
   |               ^ explicit lifetime name needed here

error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/const-param-elided-lifetime.rs:17:21
   |
LL |     fn foo<const M: &u8>(&self) {}
   |                     ^ explicit lifetime name needed here

error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/const-param-elided-lifetime.rs:22:15
   |
LL | impl<const N: &u8> B for A<N> {}
   |               ^ explicit lifetime name needed here

error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/const-param-elided-lifetime.rs:26:17
   |
LL | fn bar<const N: &u8>() {}
   |                 ^ explicit lifetime name needed here

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0637`.
